# android_opengl

app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  game.cpp  game.h  glwrapper.h  jni.cpp
app/src/main/java/com/example/myapplication/: JNIWrapper.java  MainActivity.java  RendererWrapper.java
gradle/wrapper/: gradle-wrapper.properties
